<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="652dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/editProfile"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginBottom="652dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profileTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck"
        android:text="Edit Profile"
        />

    <TextView
        android:layout_width="176dp"
        android:layout_height="59dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageButton"
        android:id="@+id/profileTitle"/>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="318dp"
        android:layout_height="317dp"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="122dp"
        tools:srcCompat="@tools:sample/avatars" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"
        app:layout_constraintLeft_toLeftOf="@id/profilePicture"
        app:layout_constraintRight_toRightOf="@id/profilePicture">

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/name"
            android:textSize="30dp"/>

        <TextView
            android:layout_columnSpan="1"
            android:text="@integer/age"
            android:textSize="30dp"/>

        <TextView
            android:layout_columnSpan="1"
            android:text="@integer/weight_class"
            android:textSize="30dp"/>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/combat_sport"
            android:textSize="30dp"/>

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/experience"
            android:textSize="30dp"/>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/location"
            android:textSize="30dp"/>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>