<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="652dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_gravity="center"
        android:columnCount="2"
        android:padding="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/input">

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="name"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/age"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userAge"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="Age"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/weight_class"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userWeight"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="Weight"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/combat_sport"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userCombatSport"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="Combat sport"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/experience"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userExperience"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="Experience"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/location"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userLocation"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="Location"
            tools:ignore="SpeakableTextPresentCheck" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Save Profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        android:id="@+id/save_profile"/>
</androidx.constraintlayout.widget.ConstraintLayout>